--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <!-- LOOGO E TESTO  -->
         <div>
           <img src="img/logo copia.png" alt="logo"id="logo">
-          <h1 id="Taboolist">Taboolist</h1>
-      </div>
+          <h1>Taboolist</h1>
+       </div>
 
     </header>
     
