--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
                 <input id="stbotton" type="button" value="Add task">
                 <input id="ndbotton" type="button" value="Add selectiom">
             </div>
+
+            <div class="secondbox">
+                <h2 class="top"><span>&#9662;</span>New Task</h2>
+                <span class="done">&#10003</span>
+                <span>Quarterly Newsletter <label class="label blue">gdhddh</label></span>
+                <h2 class="top"><span>&#9662;</span>Today</h2>
+                <span class="done">&#10003</span>
+                <span class="attivity">Quarterly Newsletter <label class="label blue">gdhddh</label></span>
+                <div>
+                 <span class="done">&#10003</span>
+                 <span class="attivity">Quarterly Newsletter <label class="label viola">gdhddh</label></span>
+                </div>
+                <div>
+                    <span class="no">&#10006</span>
+                    <span class="attivity">Quarterly Newsletter <label class="label green">gdhddh</label></span>
+                </div>
+
+            </div>
         
         
 
